--- a/cordova/source/assets/css/variable.less
+++ b/cordova/source/assets/css/variable.less
@@ -11,6 +11,8 @@
 @placeholder-color: @color;
 @border-color: #131317;
 @default-color: #1FC4E6;
+@main-color: #007381;
+@bg1color: #F9FFFF;
 // Link
 @link-color: @color;
 @link-hover-color: darken(@link-color, 15%);
