--- a/cordova/source/views/partials/login.jade
+++ b/cordova/source/views/partials/login.jade
@@ -1,18 +1,17 @@
 include ../mixins/all
-//- form#login-form(name="login-form", ng-submit="login()", method="post").login-form
-//-   .grid-fluid
-//-     .row
-//-       .col-sm-6.col-sm-offset-3
-//-         .row.form-group
-//-           .col-sm-4
-//-             +label({id: 'username', text: 'User name:'})
-//-           .col-sm-8
-//-             +input({name: 'username', attr: {'ng-model': 'username'}})
-//-         .row.form-group
-//-           .col-sm-4
-//-             +label({id: 'password', text: 'Password:'})
-//-           .col-sm-8
-//-             +input({name: 'password', type: 'password', attr: {'ng-model': 'password'}})
-//-         .text-center
-//-           +button({type: 'submit', name: 'login', text: 'Login'}).button
-          
+ion-view(class="intro-view")
+  ion-content.page-login
+    .title-login
+      h1 SOFTWARE TESTING INTERVIEW
+    .test-plan
+      h2 
+        +link() Manual Testing
+        +link() Automation Testng
+        +link() Testing In Agile
+    form.form-login
+      p Press START to start the test
+      input(placeholder="Enter Your Name")
+    button START
+
+  ion-content
+ion-view
