--- a/cordova/source/views/partials/login.jade
+++ b/cordova/source/views/partials/login.jade
@@ -2,7 +2,8 @@ include ../mixins/all
 ion-view(class="intro-view")
   ion-content.page-login
     .title-login
-      h1 SOFTWARE TESTING INTERVIEW
+      h1 SOFTWARE TESTING 
+      h1 INTERVIEW
     .test-plan
       h2 
         +link() Manual Testing
@@ -11,7 +12,6 @@ ion-view(class="intro-view")
     form.form-login
       p Press START to start the test
       input(placeholder="Enter Your Name")
-    button START
-
+    button.button.button-positive START
   ion-content
 ion-view
