--- a/cordova/source/views/layouts/layout.jade
+++ b/cordova/source/views/layouts/layout.jade
@@ -29,5 +29,6 @@ html(class="no-js", lang="en")
     .container
       include ../blocks/header
       block container
+        ion-nav-view
     include ../blocks/script
     noscript JavaScript is off. Please enable to view full site.
