--- a/cordova/source/views/layouts/template.jade
+++ b/cordova/source/views/layouts/template.jade
@@ -23,6 +23,7 @@ html(class="no-js", lang="en")
     script(src="js/modernizr.js")
   body.template
     block container
+      ion-nav-view
     include ../blocks/script
     //[if lt IE 8]><p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]
     noscript JavaScript is off. Please enable to view full site.
